--- a/content/portfolio/home_credit.html
+++ b/content/portfolio/home_credit.html
@@ -1,11 +1,12 @@
 ---
 author: "Jenni Lei"
+categories: ["Analytics"]
 tags: [R, Predictive Modeling, Feature Selection, Machine Learning, Regression, Data Science]
 date: 2020-05-25
 title: "Predictve Modeling on Home Credit Default Risk"
 featured: ""
-featuredpath: "date"
-linktitle: "jfhkf"
+featuredpath: ""
+linktitle: ""
 type : "post"
 ---
 
