--- a/content/portfolio/home_credit.html
+++ b/content/portfolio/home_credit.html
@@ -578,10 +578,9 @@ loans on the Home Credit dataset.
 Variable Importance Plot:
 <div style="width:image width px; font-size:80%; text-align:center;"><img src="/img/varimp.png" height="460" width="600"style="padding-bottom:0.3em;" /><br/></div>
 
-As shown in the importance plots of our previous models, this reaffirms that variables external
-source 2 and 3 have the most impact on outcome values. Home Credit did not specify where
-these external data sources came from. Other important variables include education and
-previously computed variables such as “credit_ratio_annuity” and “credit_ratio_goods” from the
+As shown in the importance plots of our previous models, this reaffirms that variables <b>external
+source 2</b> and <b>external source 3</b> have the most impact on outcome values. Home Credit did not specify where
+these external data sources came from. Other important variables include <b>education</b>, <b>credit_ratio_annuity</b> and <b>credit_ratio_goods</b> from the
 application dataset. Based on these results, we concluded that the most important variables
 came from application dataset and we would encourage the company to collect more data from
 external data sources 2 and 3. In addition, credit amount on current loan and loan annuity are
