--- a/content/portfolio/home_credit.html
+++ b/content/portfolio/home_credit.html
@@ -3,7 +3,7 @@ author: "Jenni Lei"
 categories: ["Analytics"]
 tags: [R, Predictive Modeling, Feature Selection, Machine Learning, Regression, Data Science]
 date: 2020-05-25
-title: "Predictve Modeling on Home Credit Default Risk"
+title: "Predictive Modeling on Home Credit Default Risk"
 featured: ""
 featuredpath: ""
 linktitle: ""
